--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,11 @@
             <id>dmulloy2-repo</id>
             <url>http://repo.dmulloy2.net/content/groups/public/</url>
         </repository>
+        <!-- Vault -->
+        <repository>
+            <id>vault-repo</id>
+            <url>http://nexus.hc.to/content/repositories/pub_releases</url>
+        </repository>
    </repositories>
    <dependencies>
        <dependency>
@@ -39,6 +44,12 @@
            <groupId>com.comphenix.protocol</groupId>
            <artifactId>ProtocolLib-API</artifactId>
            <version>4.2.1</version>
+       </dependency>
+       <dependency>
+           <groupId>net.milkbowl.vault</groupId>
+           <artifactId>Vault</artifactId>
+           <version>1.5.6</version>
+           <scope>provided</scope>
        </dependency>
    </dependencies>
 </project>
